welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:8: error: ';' expected but 'return' found.
  }    return i
       ^